appId: ${APP_ID}
---
- extendedWaitUntil:
    visible:
      id: "onboarding"
    timeout: 10000
- tapOn:
    text: "Skip"
- extendedWaitUntil:
    notVisible:
      id: "onboarding"
    timeout: 10000
