appId: ${APP_ID}
---
# Tap the app icon 10 times to open the Developer section
- tapOn:
    id: "app-icon"
- tapOn:
    id: "app-icon"
- tapOn:
    id: "app-icon"
- tapOn:
    id: "app-icon"
- tapOn:
    id: "app-icon"
- tapOn:
    id: "app-icon"
- tapOn:
    id: "app-icon"
- tapOn:
    id: "app-icon"
- tapOn:
    id: "app-icon"
- tapOn:
    id: "app-icon"
